--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: HongWe's Notes
+title: HongWei's Notes
 subtitle: 朱宏伟的前端笔记
 description:
 author: 朱宏伟
